--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ ga_domain: affe.me
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "Love life<br>我好爱这个世界上的人啊"
-sidebar-avatar: /img/avatar-hux-ny.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/affe-header.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
